// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage debe de mostrar el componente con la imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="product "
    className="productImg undefined"
    src="./coffee-mug2.png"
  />
</div>
`;

exports[`ProductImage debe de retornar el link de la imagen 1`] = `
<img
  alt="product "
  className="productImg undefined"
  src="https//:holamundo"
/>
`;
